chore: update jena & other dependencies